force-app/main/default/objects/p2s_base1__Job__c/fields/p2s_base1__BatchJob__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__BatchJob__c</fullName>
    <label>BatchJob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>