force-app/main/default/objects/p2s_base1__Job__c/fields/p2s_base1__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>