force-app/main/default/objects/p2s_base1__Job__c/fields/p2s_base1__Criteria__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Criteria__c</fullName>
    <label>Criteria</label>
    <type>TextArea</type>
</CustomField>