force-app/main/default/objects/p2s_base1__Job__c/fields/p2s_base1__CronSchedule__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__CronSchedule__c</fullName>
    <label>CronSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>