force-app/main/default/objects/p2s_base1__Job__c/fields/p2s_base1__Minutes__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>