force-app/main/default/objects/p2s_base1__Job__c/fields/p2s_base1__Process__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Process__c</fullName>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>