force-app/main/default/objects/p2s_base1__Job__c/listViews/p2s_base1__Dash.listView-meta.xml
<ListView>
    <fullName>p2s_base1__Dash</fullName>
    <columns>NAME</columns>
    <columns>p2s_base1__Sequence__c</columns>
    <columns>p2s_base1__Process__c</columns>
    <columns>p2s_base1__BatchJob__c</columns>
    <columns>p2s_base1__BatchJobJobType__c</columns>
    <columns>p2s_base1__ScheduleJob__c</columns>
    <columns>p2s_base1__BatchSize__c</columns>
    <columns>p2s_base1__Object__c</columns>
    <columns>p2s_base1__SchedulerActive__c</columns>
    <columns>p2s_base1__Criteria__c</columns>
    <columns>p2s_base1__CronMode__c</columns>
    <columns>p2s_base1__CronSchedule__c</columns>
    <columns>p2s_base1__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dash</label>
</ListView>