force-app/main/default/objects/p2s_base1__Job__c/listViews/p2s_base1__Non_Active.listView-meta.xml
<ListView>
    <fullName>p2s_base1__Non_Active</fullName>
    <columns>NAME</columns>
    <columns>p2s_base1__Process__c</columns>
    <columns>p2s_base1__Sequence__c</columns>
    <columns>p2s_base1__BatchJob__c</columns>
    <columns>p2s_base1__BatchJobJobType__c</columns>
    <columns>p2s_base1__ScheduleJob__c</columns>
    <columns>p2s_base1__BatchSize__c</columns>
    <columns>p2s_base1__Object__c</columns>
    <columns>p2s_base1__SchedulerActive__c</columns>
    <columns>p2s_base1__Criteria__c</columns>
    <columns>p2s_base1__CronMode__c</columns>
    <columns>p2s_base1__CronSchedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>p2s_base1__Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non Active</label>
</ListView>